# manganize

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  README.md  manganize.toml.example
examples/: README.md
src/: cli.rs  config.rs  image_processor.rs  input.rs  main.rs  panel_detector.rs  pdf_generator.rs  reading_unit_grouper.rs  types.rs
