[package]
name = "manganize"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manganize"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
imageproc = "0.25"
fast_image_resize = "4.0"

# PDF handling
pdfium-render = "0.8"
printpdf = "0.7"

# HTTP client for Ollama API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# Configuration
toml = "0.8"
num_cpus = "1.16"

# Parallel processing
rayon = "1.8"

# Progress indicators
indicatif = "0.17"
console = "0.15"

# Logging
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
